fix src reference

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Stage One Task</title>
-    <link rel="stylesheet" href="/style.css" />
+    <link rel="stylesheet" href="./style.css" />
   </head>
   <body>
     <header>SK.</header>
@@ -11,7 +11,7 @@
       <div>
         <img
           id="userpfp"
-          src="/assets/profilepicture.svg"
+          src="./assets/profilepicture.svg"
           alt="sheddysk"
           data-testid="slackDisplayImage"
           loading="lazy"
@@ -33,7 +33,7 @@
         id="card"
       >
         <p>Github Repo</p>
-        <img src="/assets/arrow.svg" alt="" srcset="" />
+        <img src="./assets/arrow.svg" alt="" srcset="" />
       </a>
 
       <a
@@ -43,9 +43,9 @@
         id="card"
       >
         <p>Portfolio</p>
-        <img src="/assets/arrow.svg" alt="" srcset="" />
+        <img src="./assets/arrow.svg" alt="" srcset="" />
       </a>
     </div>
-    <script src="/index.js" type = "module"></script>
+    <script src="./index.js" type = "module"></script>
   </body>
 </html>
