remove seconds from time

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
       <a
         target="_blank"
         data-testid="portfolioURL"
-        href="https://github.com/shadrxcc/hngx-first-task"
+        href="https://shadrxcc.vercel.app/"
         id="card"
       >
         <p>Portfolio</p>
