modify time format to UTC millisecond

--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
       </div>
       <div class="details">
         <p id="username" data-testid="slackUserName">sheddysk</p>
-        <p>
+        <div>
           <span id="day" data-testid="currentDayOfTheWeek"></span>,
           <span id="currentUTCTime" data-testid="currentUTCTime"></span>
-        </p>
+        </div>
         <p id="track" data-testid="myTrack">Frontend Track</p>
       </div>
 
